# TinyA2A

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  idf_component.yml  library.properties  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: echo_demo.py
examples/stm32_cube_skeleton/: heartbeat_publisher.c
include/: tinya2a.h
port/cmake/: arm-none-eabi.cmake
port/stm32/: README.md  static_alloc_example.c
python/: setup.py
python/tests/: test_envelope.py  test_frame.py  test_journal.py  test_queue.py
python/tinya2a/: __init__.py  _native.py  envelope.py  frame.py  journal.py  queue.py
src/: envelope.c  frame.c  journal.c  queue.c
